# sistema-proteg

./: .gitignore  01-ARQUITECTURA.md  02-VISTAS-Y-PANTALLAS.md  03-API-Y-LOGICA.md  04-SEGURIDAD-DESPLIEGUE-MIGRACION.md  05-CHECKLIST-PROYECTO.md  06-CONSIDERACIONES-FINALES.md  07-INSTRUCCIONES-USUARIO.md  08-REGLAS-NEGOCIO-COBRADORES.md  09-PANTALLAS-APP-COBRADOR.md  10-API-ENDPOINTS-COBRADORES.md  11-MODELOS-DATOS-COBRADORES.md  12-MANUAL-USUARIO-APP-COBRADOR.md  16-PANTALLA-LIQUIDACION-COBRADOR.md  17-REESTRUCTURA-EMPLEADOS.md  CLAUDE.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a3018309e6e_baseline_schema_v2_1_loaded_from_ddl.py  6524ad295e93_unify_seller_collector_into_employee.py  90e6fc3c4808_add_unique_employee_user_id.py  dcb529267be5_add_audit_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  events.py  exceptions.py  middleware.py  permissions.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  auth.py  base.py  business.py  catalog.py  client.py  collections.py  employee.py  endorsements.py  enums.py  incidents.py  notifications.py  payments.py  policy.py  promotions.py  settlement.py  user.py
backend/app/scripts/: seed_rbac.py
backend/app/tasks/: __init__.py  messaging.py  reports.py  scheduler.py  status_updater.py
backend/app/websocket/: events.py  manager.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_payment_transitions.py  test_security.py  test_status_updater.py
(+185 files in other folders)
